cours/TDs/TD3/vs-code-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: codercom/code-server:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /home/coder
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: code-server-pvc
